--- a/CloudCache/src/main/resources/templates/login.html
+++ b/CloudCache/src/main/resources/templates/login.html
@@ -1,41 +1,69 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head>
-    <title>PCloudCache - Login Page</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/custom.css">
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-</head>
+    <head>
+        <title>PCloudCache - Login Page</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/custom.css">
+        <script src="js/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+    </head>
 
-<body>
+    <body>
 
-<nav class="navbar navbar-inverse">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">PCloudCache</a>
+        <nav class="navbar navbar-inverse">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">PCloudCache</a>
+                </div>
+                <div id="navbar" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="/">Home</a></li>
+                        <li><a href="/kill">Stop</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+
+        <div th:fragment="aei" class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion"
+                       href="#collapseZero">Application Environment Information</a>
+                </h4>
+            </div>
+            <div id="collapseZero" class="panel-collapse collapse in">
+                <div class="panel-body">
+                    <p>
+                        <b>Favorite Team:</b>&nbsp;<span th:text="${name}?: 'unknown'"></span>
+                    </p>
+                    <p>
+                        <b>Instance Address:</b>&nbsp;<span id="instanceAddr" th:text="${instanceAddr}"></span>
+                    </p>
+                    <p>
+                        <b>Container Address:</b>&nbsp;<span id="containerAddr" th:text="${containerAddr}"></span>
+                    </p>
+                    <p th:each="instance : ${applicationServices}">
+                        <b><span th:text="${#strings.substringBefore(instance.key,'~~~')}"></span></b>:&nbsp;
+                        <span
+                            th:text="${instance.value}"></span><br/>
+                    </p>
+                </div>
+            </div>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home</a></li>
-                <li><a href="/kill">Stop</a></li>
-            </ul>
+
+        <div class="container">
+            <h4>Welcome, No session found!</h4>
+            <form>
+                Provide your favorite team name? <input type="text" name="name"/>
+                <input type="submit" formmethod="post" formaction="/team" value="Submit"/>
+            </form>
         </div>
-    </div>
-</nav>
 
-<div class="container">
-    <h4>Welcome, No session found!</h4>
-    <form>
-        Provide your favorite team name? <input type="text" name="name"/>
-        <input type="submit" formmethod="post" formaction="/team" value="Submit"/>
-    </form>
-</div>
-
-</body>
+    </body>
 
 </html>
