--- a/CloudCache/src/main/resources/templates/team.html
+++ b/CloudCache/src/main/resources/templates/team.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
     <head>
@@ -33,6 +33,36 @@
             <h4>
                 <span th:text="'Team selected: ' + ${name} + '!'"></span>
             </h4>
+        </div>
+
+        <table class="table table-striped table-hover">
+            <tr><td><strong>Favorite Team</strong></td><td th:text="${name}"></td></tr>
+        </table>
+
+        <div th:fragment="aei" class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion"
+                       href="#collapseZero">Application Environment Information</a>
+                </h4>
+            </div>
+            <div id="collapseZero" class="panel-collapse collapse in">
+                <div class="panel-body">
+                    <p>
+                        <b>Favorite Team:</b>&nbsp;<span th:text="${name}?: 'running locally'"></span>
+                    </p>
+                    <p>
+                        <b>Instance Address:</b>&nbsp;<span id="instanceAddr" th:text="${instanceAddr}"></span>
+                    </p>
+                    <p>
+                        <b>Container Address:</b>&nbsp;<span id="containerAddr" th:text="${containerAddr}"></span>
+                    </p>
+                    <p th:each="instance : ${applicationServices}">
+                        <b><span th:text="${#strings.substringBefore(instance.key,'~~~')}"></span></b>:&nbsp;<span
+                            th:text="${instance.getValue()}"></span><br/>
+                    </p>
+                </div>
+            </div>
         </div>
 
     </body>
